html hw 1 additions

--- a/4. HTML/Homework/1. HTML Fundamentals/3. Doge Social Network/friends.html
+++ b/4. HTML/Homework/1. HTML Fundamentals/3. Doge Social Network/friends.html
@@ -21,22 +21,24 @@
 				</li>
 			</ul>
 		</nav>
-		<hr/>
-		<h2>Friends of Doge</h2>
-		<hr/>
-		<dl>
-			<dt>
-				<em>Such Friend</em>
-			</dt>
-				<dd>best friend</dd>
-			<dt>
-				<em>Many Friends</em>
-			</dt>
-				<dd>unknown</dd>
-			<dt>
-				<em>Wow</em>
-			</dt>
-				<dd>yeah, right</dd>
-		</dl>
+		<section>
+			<hr/>
+			<h2>Friends of Doge</h2>
+			<hr/>
+			<dl>
+				<dt>
+					<em>Such Friend</em>
+				</dt>
+					<dd>best friend</dd>
+				<dt>
+					<em>Many Friends</em>
+				</dt>
+					<dd>unknown</dd>
+				<dt>
+					<em>Wow</em>
+				</dt>
+					<dd>yeah, right</dd>
+			</dl>
+		</section>
 	</body>
 </html>
