--- a/4. HTML/Homework/1. HTML Fundamentals/3. Doge Social Network/home.html
+++ b/4. HTML/Homework/1. HTML Fundamentals/3. Doge Social Network/home.html
@@ -21,10 +21,12 @@
 				</li>
 			</ul>
 		</nav>
-		<hr/>
-		<h2>Welcome to the Doge Social Network</h2>
-		<hr/>
-		<p>Here you can find friends or stalk strangers</p>
-		<p>The Doge Social Network does not take any responsibility for the information found</p>
+		<section>
+			<hr/>
+			<h2>Welcome to the Doge Social Network</h2>
+			<hr/>
+			<p>Here you can find friends or stalk strangers</p>
+			<p>The Doge Social Network does not take any responsibility for the information found</p>
+		</section>
 	</body>
 </html>
