--- a/4. HTML/Homework/1. HTML Fundamentals/3. Doge Social Network/profile.html
+++ b/4. HTML/Homework/1. HTML Fundamentals/3. Doge Social Network/profile.html
@@ -21,11 +21,11 @@
 				</li>
 			</ul>
 		</nav>
+		<section>
 		<hr/>
 		<h2>Profile of Doge</h2>
 		<hr/>
-		<section>
-			<img src="doge.jpg" alt="profile picture"/><br/>
+			<img src="doge.jpg" alt="profile picture" width="150" height="150" border="1px"/><br/>
 			<strong>Name</strong>: Doge <br/>
 			<strong>Birthday</strong> : Top secret<br/>
 			<strong>Occupation</strong> : Celebrity<br/>
