--- a/4. HTML/Homework/3. HTML Forms/1. Sample Form/sample-form.html
+++ b/4. HTML/Homework/3. HTML Forms/1. Sample Form/sample-form.html
@@ -163,11 +163,11 @@
                     </tr>
                     
                     <tr>
-                        <td><label for="StartDate">Starting Date</label></td>
+                        <td><label for="spring">Starting Date</label></td>
                         <td>
-                            <input type="radio" name="StartDate" id="spring" value="Spring 2006" checked />
+                            <input type="radio" name="start-date" id="spring" value="Spring 2006" checked />
                             <label for="spring">Spring 2006</label>
-                            <input type="radio" name="StartDate" id="summer" value="Summer 2006" />
+                            <input type="radio" name="start-date" id="summer" value="Summer 2006" />
                             <label for="summer">Summer 2006</label>
                         </td>
                     </tr>
