--- a/5. CSS/Homework/1. CSS Overview/3. WebPage/index.html
+++ b/5. CSS/Homework/1. CSS Overview/3. WebPage/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Telerik Software Academy 2012 CSS Course</title>
+	<link type="text/css" rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
