CSS hw2 task 1,2

--- a/5. CSS/Homework/2. CSS Presentation/2. Web site/index.html
+++ b/5. CSS/Homework/2. CSS Presentation/2. Web site/index.html
@@ -2,7 +2,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>CSS Styling </title>
-    <link href="2.%20homework.css" rel="stylesheet" />
+    <link href="styles/styles.css" rel="stylesheet"  >
+	<link href="styles/additional-styles.css" rel="stylesheet" type="text/css" >
 </head>
 <body>
     <header>
