CSS HW2 calculator - finished

--- a/5. CSS/Homework/2. CSS Presentation/4. Calculator/index.html
+++ b/5. CSS/Homework/2. CSS Presentation/4. Calculator/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
     <div id="main-content">
-        <img id="calculatorIcon" src="http://s28.postimg.org/depwh2pm5/Calculator_Windows_7_Icon.png" alt="Calculator Icon" />
+        <img id="calculatorIcon" src="images/Calculator_Icon.png" alt="Calculator Icon" />
         <span title="CalculatorTitle">Calculator</span>
         <div id="window-buttons">
             <button id="minimize"></button>
