JavaScript Lectures and HW 1, 2 README, 3 README

--- a/6. JavaScript Fundamentals/Homework/1. Data Types and Variables/index.html
+++ b/6. JavaScript Fundamentals/Homework/1. Data Types and Variables/index.html
@@ -10,13 +10,7 @@
 <body>
     <div id="js-console"></div>
     <script src="scripts/js-console.js"></script>
-    <script>
-        //jsConsole.writeLine("1 > 2 ? " + false);
-        
-        //Boolean literals
-        var bool= (false || (false==0));
-        jsConsole.writeLine(bool);
-    </script>
+    <script src="scripts/all-tasks.js"></script>
 </body>
 
 </html>
