JavaScript DOM & UI - Homework 03. KineticJS - changes

--- a/8. JavaScript UI & DOM/Homework/03. KineticJS/01. Family Tree/index.html
+++ b/8. JavaScript UI & DOM/Homework/03. KineticJS/01. Family Tree/index.html
@@ -12,6 +12,7 @@
 	</style>
 	<script type="text/javascript" src="scripts/kinetic-v5.1.0.min.js"></script>
 	<script type="text/javascript" src="scripts/script.js"></script>
+	<script type="text/javascript" src="scripts/data.js"></script>
 </head>
 <body>
 	<div id='wrapper'>
