JavaScript DOM & UI homework 03. KineticJS - done

--- a/8. JavaScript UI & DOM/Homework/03. KineticJS/01. Family Tree/index.html
+++ b/8. JavaScript UI & DOM/Homework/03. KineticJS/01. Family Tree/index.html
@@ -1,22 +1,14 @@
-<!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>01. Family Tree</title>
-	<style type="text/css" media="screen">
-		* {
-			padding: 0;
-			margin: 0;
-		}
-	</style>
-	<script type="text/javascript" src="scripts/kinetic-v5.1.0.min.js"></script>
-	<script type="text/javascript" src="scripts/script.js"></script>
-	<script type="text/javascript" src="scripts/data.js"></script>
-</head>
-<body>
-	<div id='wrapper'>
+    <head>
+        <script type="text/javascript" src="scripts/kinetic-v5.1.0.min.js"></script>
+        <script type="text/javascript" src="scripts/data.js"></script>
+        <script type="text/javascript" src="scripts/script.js"></script>
+        <link rel="stylesheet" href="styles/styles.css">   
+        <title>1. Family three</title>
+    </head>
+    <body>
+        <div id='wrapper'>
             <div id="kinetic-container"></div>
-	</div>
-</body>
+        </div>
+    </body>
 </html>
