--- a/8. JavaScript UI & DOM/Homework/04. SVG/01. MEAN/index.html
+++ b/8. JavaScript UI & DOM/Homework/04. SVG/01. MEAN/index.html
@@ -11,21 +11,37 @@
 		<svg width="300" height="450" id="svg-container">
 
 		  <!-- M -->
-		  <text x="50" y="140" fill="#3E3F37" class="outer-text">M</text>
-		  <circle cx="160" cy="125" r="60" stroke="none" fill="#3E3F37" />
+			<text x="50" y="140" fill="#3E3F37" class="outer-text">M</text>
+			<circle cx="160" cy="125" r="60" stroke="none" fill="#3E3F37" />
+			<!-- Genereted with Illustrator -->
+			<path fill="#5EB14A" d="M177,137.501c0-1.44-11.54-3-17-3c-5.45,0-17,1.56-17,3c0-12.51,11.55-39,17-39 C165.46,98.501,177,124.991,177,137.501z"/>
+			<path fill="#449644" d="M177,137.501c0-12.492-11.546-39-17-39v36C165.454,134.501,177,136.541,177,137.501z"/>
 
-		  <!-- E -->
-		  <text x="53" y="210" fill="#282827" class="outer-text">E</text>
-		  <circle cx="160" cy="195" r="60" stoke="none" fill="#282827" />
-		  <text x="111" y="204" fill="white" stroke="none" id="express">express</text>
+			<!-- E -->
+			<text x="53" y="210" fill="#282827" class="outer-text">E</text>
+			<circle cx="160" cy="195" r="60" stoke="none" fill="#282827" />
+			<text x="111" y="204" fill="white" stroke="none" id="express">express</text>
 
-		  <!-- A -->
-		  <text x="52" y="280" fill="#E23337" class="outer-text">A</text>
-		  <circle cx="160" cy="265" r="60" stoke="none" fill="#E23337" />
+			<!-- A -->
+			<text x="52" y="280" fill="#E23337" class="outer-text">A</text>
+			<circle cx="160" cy="265" r="60" stoke="none" fill="#E23337" />
+			<!-- Genereted with Illustrator -->
+			<polygon fill="#B3B3B3" points="167.621,276.833 160.933,262.184 160.933,245.167 175.058,276.833 "/>
+			<polygon fill="#B1B8B8" points="126.121,251.75 161.433,237.188 195.246,251.75 191.871,284.813 188.371,282.25 191.308,254.25 
+				161.433,242.125 130.933,254.25 133.871,283.563 130.933,284.813 "/>
+			<polygon fill="#F1F1F1" points="155.371,276.833 147.433,276.833 160.933,245.167 160.933,262.184 "/>
 
-		  <!-- N -->
-		  <text x="50" y="350" fill="#8EC74E" class="outer-text">N</text>
-		  <circle cx="160" cy="335" r="60" stoke="none" fill="#8EC74E" />
+			<!-- N -->
+			<text x="50" y="350" fill="#8EC74E" class="outer-text">N</text>
+			<circle cx="160" cy="335" r="60" stoke="none" fill="#8EC74E" />
+			<!-- Genereted with Illustrator -->
+			<polyline fill="#3E3F37" points="173.937,327.955 166.104,332.955 166.104,343.621 173.937,348.288 182.937,342.788 182.937,319.121 178.104,315.621 178.104,329.788 173.937,327.955 173.937,334.955 171.104,338.182 173.937,341.288 176.958,338.182 173.937,334.955 "/>
+			<polygon fill="#FFFFFF" points="160.683,343.517 151.312,349.076 141.812,343.74 141.683,332.846 151.053,327.286 160.553,332.622 "/>
+			<polygon fill="#FFFFFF" points="176.083,339.176 174.034,340.446 171.909,339.307 171.833,336.896 173.882,335.626 176.007,336.766 "/>
+			<polygon fill="#3E3F37" points="123.333,337.119 127.417,335.035 131.5,337.119 131.5,344.453 137.5,346.953 138,346.953 138,333.619 127.167,327.286 117,333.619 117,346.953 118,346.953 123.333,344.453 "/>
+			<polygon fill="#3E3F37" points="199.823,324.098 189.948,330.598 189.948,340.348 198.448,345.681 204.573,343.014 196.823,337.723 196.823,333.098 199.823,331.223 203.891,334.25 208.073,332.223 "/>
+			<polygon fill="#FFFFFF" points="196.813,333.109 196.813,337.734 198.736,339.048 203.88,334.262 199.813,331.234 "/>
+
 		</svg>
 	</div>
 </body>
